// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders and compares with different address 1`] = `
<div
  className="PostalAddress"
>
  <h3>
    Address
  </h3>
  <div
    className="row"
  >
    <div
      className="PostalAddressCol col-md-12"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="line1Group"
          >
            <label
              className="form-label"
              htmlFor="line1"
            >
              Line1
            </label>
            <input
              className="form-control is-invalid"
              data-testid="line1"
              id="line1"
              name="line1"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="Place de le République Française, 10"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="PostalAddressCol col-md-12"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="line2Group"
          >
            <label
              className="form-label"
              htmlFor="line2"
            >
              Line2
            </label>
            <input
              className="form-control is-invalid"
              data-testid="line2"
              id="line2"
              name="line2"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="boite 15"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="PostalAddressCol col-md-4"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="postalCodeGroup"
          >
            <label
              className="form-label"
              htmlFor="postalCode"
            >
              Postal Code
            </label>
            <input
              className="form-control"
              data-testid="postalCode"
              id="postalCode"
              name="postalCode"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="4000"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="PostalAddressCol col-md-8"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="cityGroup"
          >
            <label
              className="form-label"
              htmlFor="city"
            >
              City
            </label>
            <input
              className="form-control"
              data-testid="city"
              id="city"
              name="city"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="Liège"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="PostalAddressCol col-md-12"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="countryGroup"
          >
            <label
              className="form-label"
              htmlFor="country"
            >
              Country
            </label>
            <input
              className="form-control"
              data-testid="country"
              id="country"
              name="country"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="Belgium"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders and compares with same address 1`] = `
<div
  className="PostalAddress"
>
  <h3>
    Address
  </h3>
  <div
    className="row"
  >
    <div
      className="PostalAddressCol col-md-12"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="line1Group"
          >
            <label
              className="form-label"
              htmlFor="line1"
            >
              Line1
            </label>
            <input
              className="form-control"
              data-testid="line1"
              id="line1"
              name="line1"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="Place de le République Française, 10"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="PostalAddressCol col-md-12"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="line2Group"
          >
            <label
              className="form-label"
              htmlFor="line2"
            >
              Line2
            </label>
            <input
              className="form-control"
              data-testid="line2"
              id="line2"
              name="line2"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="boite 15"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="PostalAddressCol col-md-4"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="postalCodeGroup"
          >
            <label
              className="form-label"
              htmlFor="postalCode"
            >
              Postal Code
            </label>
            <input
              className="form-control"
              data-testid="postalCode"
              id="postalCode"
              name="postalCode"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="4000"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="PostalAddressCol col-md-8"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="cityGroup"
          >
            <label
              className="form-label"
              htmlFor="city"
            >
              City
            </label>
            <input
              className="form-control"
              data-testid="city"
              id="city"
              name="city"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="Liège"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="PostalAddressCol col-md-12"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="countryGroup"
          >
            <label
              className="form-label"
              htmlFor="country"
            >
              Country
            </label>
            <input
              className="form-control"
              data-testid="country"
              id="country"
              name="country"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="Belgium"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders without comparison 1`] = `
<div
  className="PostalAddress"
>
  <h3>
    Address
  </h3>
  <div
    className="row"
  >
    <div
      className="PostalAddressCol col-md-12"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="line1Group"
          >
            <label
              className="form-label"
              htmlFor="line1"
            >
              Line1
            </label>
            <input
              className="form-control"
              data-testid="line1"
              id="line1"
              name="line1"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="Place de le République Française, 10"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="PostalAddressCol col-md-12"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="line2Group"
          >
            <label
              className="form-label"
              htmlFor="line2"
            >
              Line2
            </label>
            <input
              className="form-control"
              data-testid="line2"
              id="line2"
              name="line2"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="boite 15"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="PostalAddressCol col-md-4"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="postalCodeGroup"
          >
            <label
              className="form-label"
              htmlFor="postalCode"
            >
              Postal Code
            </label>
            <input
              className="form-control"
              data-testid="postalCode"
              id="postalCode"
              name="postalCode"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="4000"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="PostalAddressCol col-md-8"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="cityGroup"
          >
            <label
              className="form-label"
              htmlFor="city"
            >
              City
            </label>
            <input
              className="form-control"
              data-testid="city"
              id="city"
              name="city"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="Liège"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row"
  >
    <div
      className="PostalAddressCol col-md-12"
    >
      <div
        className="ComparableField"
      >
        <div
          className="FormGroup"
          style={
            Object {
              "backgroundColor": "#eff3fe",
            }
          }
        >
          <style>
            
    .FormGroup .form-control,
    .FormGroup .form-control[readonly],
    .FormGroup .input-group .btn-primary {
        color: #000000;
    }
    
          </style>
          <div
            className="form-group"
            data-testid="countryGroup"
          >
            <label
              className="form-label"
              htmlFor="country"
            >
              Country
            </label>
            <input
              className="form-control"
              data-testid="country"
              id="country"
              name="country"
              onBlur={[Function]}
              onChange={[Function]}
              readOnly={true}
              type="text"
              value="Belgium"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
